gitops/apps/production/ui-terminal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-terminal
  namespace: production
spec:
  selector:
    app: ui-terminal
  ports:
    - name: http
      port: 3000
      targetPort: 3000
